--- a/new/index.html
+++ b/new/index.html
@@ -10,17 +10,12 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	
-    
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-
     <title>La chouette agence</title>
-
-    
 <!-- Analytics -->
  
 <!-- Analytics END -->
@@ -242,7 +237,8 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
