--- a/new/contact.html
+++ b/new/contact.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+    <meta name="keywords" content="">
 	<meta name="description"
 		  content="Contactez La chouette agence ! La chouette agence est une entreprise de Web design à Lyon, stratégies commerciales et accompagnement de l'identité web de nos clients.">
 	<meta name="viewport"
@@ -48,16 +49,12 @@
 	<div class="page-container">
 
 		<!-- bloc-0 -->
-		<header class="bloc bgc-white l-bloc "
-				id="bloc-0">
+		<header class="bloc bgc-white l-bloc" id="bloc-0">
 			<div class="container bloc-sm">
-
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand"
-						   href="index.html"><img src="img/la-chouette-agence.webp"
-								 alt="logo de la chouette agence noir et blanc"
-								 height="40" /><span>La chouette agence</span></a>
+						   href="index.html"><img src="img/la-chouette-agence.webp" alt="logo de la chouette agence noir et blanc" height="40" /><span>La chouette agence</span></a>
 						<button id="nav-toggle"
 								type="button"
 								class="ui-navbar-toggle navbar-toggle"
@@ -104,57 +101,49 @@
 		<!-- bloc-6 END -->
 
 		<!-- bloc-7 -->
-		<section class="bloc bgc-white l-bloc"
-				 id="bloc-7">
+		<section class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
 				<div class="row">
 					<h2 class="mg-md text-center">Nous contacter</h2>
 					<div class="col-sm-6">
 						<form id="form_1"
-							  action="./includes/form_1.php"
-							  method="POST">
+							  novalidate
+							  success-msg="Your message has been sent."
+							  fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
-								<label for="name">
-									Nom *
-									<input id="name"
-										   class="form-control"
-										   required />
+								<label>
+									Nom
 								</label>
+								<input id="name"
+									   class="form-control"
+									   required />
 							</div>
 							<div class="form-group">
-								<label for="email">
-									Adresse email *
-									<input id="email"
-										   class="form-control"
-										   type="email"
-										   required />
+								<label>
+									Adresse email
 								</label>
+								<input id="email"
+									   class="form-control"
+									   type="email"
+									   required />
 							</div>
 							<div class="form-group">
-								<label for="input_504">
+								<label>
 									Comment nous avez-vous connu ?
-									<input class="form-control"
-										   type="text"
-										   id="input_504" />
 								</label>
+								<input class="form-control"
+									   type="email"
+									   required
+									   id="input_504" />
 							</div>
 							<div class="form-group">
-								<label for="message">
-									Brief de votre projet (Ajoutez autant de détails que nécessaire) *<br>
-									<textarea id="message"
-											  class="form-control"
-											  rows="4"
-											  cols="50"
-											  required></textarea>
-								</label>
-							</div>
-							<div class="form-group">
-								<input id="rgpd"
-									   type="checkbox"
-									   required>
-								<label for="rgpd">En soumettant ce formulaire, j'accepte les politiques de
-									confidentialité et autorise à être recontacté(e) dans le cadre de la
-									demande.*</label>
+								<label>
+									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+								</label><textarea id="message"
+										  class="form-control"
+										  rows="4"
+										  cols="50"
+										  required></textarea>
 							</div>
 							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
 									type="submit">
